force-app/main/default/objects/AccountPlan__c/AccountPlan__c.object-meta.xml
<CustomObject>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>