force-app/main/default/objects/AccountPlan__c/fields/Corporate_Objectives_CO_advanced__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Objectives_CO_advanced__c</fullName>
    <label>Corporate Objectives (CO)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>