force-app/main/default/objects/AccountPlan__c/fields/Dagens_avtaler__c.field-meta.xml
<CustomField>
    <fullName>Dagens_avtaler__c</fullName>
    <label>Dagens avtaler</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>