force-app/main/default/objects/AccountPlan__c/fields/EGR_siste_3_r__c.field-meta.xml
<CustomField>
    <fullName>EGR_siste_3_r__c</fullName>
    <label>EGR siste 3 år</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>