force-app/main/default/objects/AccountPlan__c/fields/Eierstruktur__c.field-meta.xml
<CustomField>
    <fullName>Eierstruktur__c</fullName>
    <label>Eierstruktur</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>