force-app/main/default/objects/AccountPlan__c/fields/Hovedkonkurrent_1__c.field-meta.xml
<CustomField>
    <fullName>Hovedkonkurrent_1__c</fullName>
    <label>Hovedkonkurrent # 1</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>