force-app/main/default/objects/AccountPlan__c/fields/Hovedkonkurrent_3__c.field-meta.xml
<CustomField>
    <fullName>Hovedkonkurrent_3__c</fullName>
    <label>Hovedkonkurrent # 3</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>