force-app/main/default/objects/AccountPlan__c/fields/Hovedkonkurrent_4__c.field-meta.xml
<CustomField>
    <fullName>Hovedkonkurrent_4__c</fullName>
    <label>Hovedkonkurrent # 4</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>