force-app/main/default/objects/AccountPlan__c/fields/Key_business_and_IT_initiatives_KI_adva__c.field-meta.xml
<CustomField>
    <fullName>Key_business_and_IT_initiatives_KI_adva__c</fullName>
    <label>Key business and IT initiatives (KI)</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>