force-app/main/default/objects/AccountPlan__c/fields/Kort_beskrivelse_av_kunden__c.field-meta.xml
<CustomField>
    <fullName>Kort_beskrivelse_av_kunden__c</fullName>
    <label>Kort beskrivelse av kunden</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>