force-app/main/default/objects/AccountPlan__c/fields/Kundens_strategi__c.field-meta.xml
<CustomField>
    <fullName>Kundens_strategi__c</fullName>
    <label>Kundens strategi</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>