force-app/main/default/objects/AccountPlan__c/fields/M_lsetninger_med_kunden_de_neste_3_12_ad__c.field-meta.xml
<CustomField>
    <fullName>M_lsetninger_med_kunden_de_neste_3_12_ad__c</fullName>
    <label>Målsetninger med kunden de neste 3-12 mn</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>