force-app/main/default/objects/AccountPlan__c/fields/Mission_critical_priorities_MCP__c.field-meta.xml
<CustomField>
    <fullName>Mission_critical_priorities_MCP__c</fullName>
    <label>Mission critical priorities (MCP)</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>