force-app/main/default/objects/AccountPlan__c/fields/Mlsetninger_med_kunden_de_neste_12_36_m__c.field-meta.xml
<CustomField>
    <fullName>Mlsetninger_med_kunden_de_neste_12_36_m__c</fullName>
    <label>Målsetninger med kunden de neste 12-36 m</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>