force-app/main/default/objects/AccountPlan__c/fields/Mlsetninger_med_kunden_de_neste_3_12_mn__c.field-meta.xml
<CustomField>
    <fullName>Mlsetninger_med_kunden_de_neste_3_12_mn__c</fullName>
    <label>Målsetninger med kunden de neste 3-12 mn</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>