force-app/main/default/objects/AccountPlan__c/fields/Muligheter__c.field-meta.xml
<CustomField>
    <fullName>Muligheter__c</fullName>
    <label>Muligheter</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>