force-app/main/default/objects/AccountPlan__c/fields/N_kkeldata_advanced__c.field-meta.xml
<CustomField>
    <fullName>N_kkeldata_advanced__c</fullName>
    <label>Nøkkeldata</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>