force-app/main/default/objects/AccountPlan__c/fields/Nkkeldata__c.field-meta.xml
<CustomField>
    <fullName>Nkkeldata__c</fullName>
    <label>Nøkkeldata</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>