force-app/main/default/objects/AccountPlan__c/fields/Salgsplan_DPS__c.field-meta.xml
<CustomField>
    <fullName>Salgsplan_DPS__c</fullName>
    <label>Salgsplan</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>