force-app/main/default/objects/AccountPlan__c/fields/Styrker__c.field-meta.xml
<CustomField>
    <fullName>Styrker__c</fullName>
    <label>Styrker</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>