force-app/main/default/objects/AccountPlan__c/fields/Tilstedevrelse_hos_kunden__c.field-meta.xml
<CustomField>
    <fullName>Tilstedevrelse_hos_kunden__c</fullName>
    <label>Tilstedeværelse hos kunden</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>