force-app/main/default/objects/AccountPlan__c/fields/Trusler__c.field-meta.xml
<CustomField>
    <fullName>Trusler__c</fullName>
    <label>Trusler</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>